<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_add_to_library">Add to library</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_backspace_button">Backspace</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_collapse_content">Collapse</string>
    <string name="accessibility_collapse_text">collapse</string>
    <string name="accessibility_context_menu">Menu</string>
    <string name="accessibility_current_account">Current Account</string>
    <string name="accessibility_dislike_video">Dislike</string>
    <string name="accessibility_drag_handler">Drag to reorder. Double tap and hold to drag</string>
    <string name="accessibility_duration_hour">%1$s %2$s %3$s</string>
    <string name="accessibility_duration_minutes">%1$s %2$s</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_content">Expand</string>
    <string name="accessibility_expand_survey">Expand survey</string>
    <string name="accessibility_expand_text">expand</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_grid_view_toggle">Show in grid view</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_like_video">Like</string>
    <string name="accessibility_link_with_tv_code">Goes to the link with TV Code screen.</string>
    <string name="accessibility_list_view_toggle">Show in list view</string>
    <string name="accessibility_manage_settings">Manage settings</string>
    <string name="accessibility_music_repeat">Repeat</string>
    <string name="accessibility_music_share">Share</string>
    <string name="accessibility_music_shuffle">Shuffle</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_next_disabled">Next song disabled</string>
    <string name="accessibility_next_enabled">Next song</string>
    <string name="accessibility_next_track_disabled">Next track disabled</string>
    <string name="accessibility_next_track_enabled">Next track</string>
    <string name="accessibility_open_keyboard_button">Open Keyboard</string>
    <string name="accessibility_parent_tools_toolbar_back">back</string>
    <string name="accessibility_pause">Pause video</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_play_all">Play all</string>
    <string name="accessibility_play_all_button">Play all button</string>
    <string name="accessibility_playback_rate">Set Playback Speed</string>
    <string name="accessibility_player_progress_time">%1$s of %2$s</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_previous_disabled">Previous song disabled</string>
    <string name="accessibility_previous_enabled">Previous song</string>
    <string name="accessibility_previous_track_disabled">Previous track disabled</string>
    <string name="accessibility_previous_track_enabled">Previous track</string>
    <string name="accessibility_repeat_disabled">Repeat disabled</string>
    <string name="accessibility_repeat_off">Repeat off</string>
    <string name="accessibility_repeat_on">Repeat on</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="accessibility_replay">Replay video</string>
    <string name="accessibility_rewind">Rewind</string>
    <string name="accessibility_save_to_library">Save to library</string>
    <string name="accessibility_scrubbed_preview">Scrubbed preview</string>
    <string name="accessibility_search_clear">Clear search</string>
    <string name="accessibility_search_edit_suggestion">Edit suggestion %1$s</string>
    <string name="accessibility_see_more_button">See more button</string>
    <string name="accessibility_send_button">Send reply</string>
    <string name="accessibility_send_comment_button">Send comment</string>
    <string name="accessibility_send_share">Share</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_share_target">App</string>
    <string name="accessibility_shuffle_disabled">Shuffle disabled</string>
    <string name="accessibility_shuffle_off">Shuffle off</string>
    <string name="accessibility_shuffle_on">Shuffle on</string>
    <string name="accessibility_skip_ad">You can now skip this ad</string>
    <string name="accessibility_start_radio">Start radio</string>
    <string name="accessibility_switch_compact_preference_toggle">Toggle</string>
    <string name="accessibility_tastebuilder_item_selected">%sSelected</string>
    <string name="accessibility_tastebuilder_item_unselected">%sUnselected</string>
    <string name="accessibility_timestamp_button">Add a timestamp</string>
    <string name="accessibility_undo_add_to_library">Remove from library</string>
    <string name="accessibility_undo_dislike_video">Undo dislike</string>
    <string name="accessibility_undo_like_video">Undo like</string>
    <string name="accessibility_video_player">Video player</string>
    <string name="accessibility_video_reply_button">Attach video to reply</string>
    <string name="accessibility_voice_search">Voice search</string>
    <string name="account">Account</string>
    <string name="account_switcher_accessibility_label">%s. Switch accounts.</string>
    <string name="account_switcher_add_account">Add account</string>
    <string name="account_switcher_error_credentials_byline">Tap to sign in</string>
    <string name="account_switcher_error_credentials_title">Account action required</string>
    <string name="account_switcher_error_general_byline">Tap to retry</string>
    <string name="account_switcher_error_general_title">An error occurred</string>
    <string name="account_switcher_header_title">Accounts</string>
    <string name="account_switcher_manage_account">Manage accounts</string>
    <string name="account_switcher_other_accounts">Other accounts</string>
    <string name="account_switcher_selected_account_label">Selected account: %s</string>
    <string name="account_switcher_switch_account">Switch accounts</string>
    <string name="account_updates_notification_channel_title">Account Updates</string>
    <string name="action_add_playlist_to_offline">Download</string>
    <string name="action_add_to_offline_songs">Download</string>
    <string name="action_disable_auto_download">Turn off auto-downloads</string>
    <string name="action_enable_auto_download">Turn on auto-downloads</string>
    <string name="action_menu">Action menu</string>
    <string name="action_remove_from_offline_songs">Remove download</string>
    <string name="action_remove_playlist_from_offline">Remove download</string>
    <string name="action_unavailable_toast">This action is unavailable</string>
    <string name="action_view">View</string>
    <string name="active_account_header_avatar_label">Your channel</string>
    <string name="ad_badge">Ad</string>
    <string name="ad_learn_more">Visit advertiser</string>
    <string name="ad_text_separator">" · "</string>
    <string name="ad_title">Advertisement</string>
    <string name="add_five_minutes">Add 5 minutes</string>
    <string name="add_playlist_to_offline">Download playlist</string>
    <string name="add_playlist_to_offline_start">Saving playlist…</string>
    <string name="add_to_library_unavailable">Add to library unavailable</string>
    <string name="add_to_offline_start">Downloading video…</string>
    <string name="add_to_offline_waiting_for_wifi">Waiting for Wi-Fi to save. Visit Settings to reset.</string>
    <string name="add_to_offline_waiting_for_wifi_or_unmetered">Waiting for preferred connection to download. Visit Settings to reset.</string>
    <string name="add_to_offline_wifi_unavailable">Connect to Wi-Fi to continue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue_toast_album">Album added to queue</string>
    <string name="add_to_queue_toast_episode">Episode added to queue</string>
    <string name="add_to_queue_toast_playlist">Playlist added to queue</string>
    <string name="add_to_queue_toast_song">Song added to queue</string>
    <string name="add_video_to_offline_error">"Video wasn't saved"</string>
    <string name="advertisement_assurance">Your video will play after this ad</string>
    <string name="album_label">Album</string>
    <string name="album_subtitle_with_artist_and_release_year">%1$s • %2$d</string>
    <string name="all_devices_title">All devices</string>
    <string name="already_saved_some_to_playlist">"Looks like you've already saved some of these songs to the playlist."</string>
    <string name="already_saved_some_tracks_to_playlist">"Looks like you've already saved some of these tracks to the playlist."</string>
    <string name="already_saved_to_playlist">"Looks like you've already saved this to the playlist."</string>
    <string name="app_name">YouTube Music</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="retail_mode_albums_header">Official albums, singles &amp; more</string>
    <string name="retail_mode_albums_subtext">Listen to official songs, albums, charts and playlists for any genre and mood</string>
    <string name="retail_mode_catalog_header">Live performances, remixes &amp; covers</string>
    <string name="retail_mode_catalog_subtext">Explore our catalog and discover hard to find songs, remixes, and more</string>
    <string name="retail_mode_intro">A new music streaming app. Made by YouTube.</string>
    <string name="retail_mode_recommendations_header">Recommendations based on taste, location &amp; time of day</string>
    <string name="retail_mode_recommendations_subtext">Personalized recommendations to help you discover new music</string>
    <string name="setup_login_failed">Cannot sign in</string>
    <string name="welcome_sign_in_text">Sign in to stream and browse playlists, albums, and artists from YouTube Music</string>
    <string name="welcome_text">Open the world of music</string>
</resources>