<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.youtube.music.watchpage.MusicPlaybackControlsTimeBar android:id="@id/time_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/time_bar_margin_bottom" android:importantForAccessibility="yes" android:paddingStart="@dimen/time_bar_padding_horizontal" android:paddingEnd="@dimen/time_bar_padding_horizontal" yt:scrubberMaxSize="20.0dip" yt:scrubberMinSize="12.0dip" yt:textMargin="@dimen/item_extra_small_spacing" yt:timeBarHeight="@dimen/time_bar_height" yt:timeTextColor="@color/ytm_text_color_secondary_translucent" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/controls_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/controls_container_margin_bottom" android:layout_below="@id/time_bar" android:layout_centerHorizontal="true" android:layoutDirection="ltr" android:paddingStart="@dimen/playback_controls_padding_horizontal" android:paddingEnd="@dimen/playback_controls_padding_horizontal">
        <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/queue_shuffle_button" android:background="@drawable/ripple" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:scaleType="center" android:contentDescription="@string/accessibility_music_shuffle" android:alpha="@dimen/active_icon_alpha" yt:srcCompat="@drawable/yt_outline_arrow_shuffle_vd_theme_24" yt:tint="@color/quantum_white_100" style="@style/MusicPlayerButton" />
        <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/playback_rate_button" android:background="@drawable/ripple" android:visibility="gone" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:scaleType="center" android:contentDescription="@string/accessibility_playback_rate" android:alpha="@dimen/active_icon_alpha" yt:tint="@color/quantum_white_100" style="@style/MusicPlayerButton" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="center_vertical" android:id="@id/player_control_rewind_button" android:background="@drawable/ripple" android:visibility="gone" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:src="@drawable/music_player_replay_10_36" android:scaleType="center" android:tint="@color/quantum_white_100" android:contentDescription="@string/accessibility_rewind" style="@style/MusicPlayerButton" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="center_vertical" android:id="@id/player_control_previous_button" android:background="@drawable/ripple" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:src="@drawable/music_player_prev" android:scaleType="center" android:contentDescription="@string/accessibility_previous_enabled" style="@style/MusicPlayerButton" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="center_vertical" android:id="@id/player_control_play_pause_replay_button" android:background="@drawable/ripple" android:layout_width="@dimen/remix_overlay_play_button_size_large" android:layout_height="@dimen/remix_overlay_play_button_size_large" android:contentDescription="@string/accessibility_play" android:layout_marginStart="@dimen/playback_controls_space_medium" android:layout_marginEnd="@dimen/playback_controls_space_medium" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="center_vertical" android:id="@id/player_control_next_button" android:background="@drawable/ripple" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:src="@drawable/music_player_next" android:scaleType="center" android:contentDescription="@string/accessibility_next_enabled" style="@style/MusicPlayerButton" />
        <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="center_vertical" android:id="@id/player_control_fast_forward_button" android:background="@drawable/ripple" android:visibility="gone" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:src="@drawable/music_player_forward_30_36" android:scaleType="center" android:tint="@color/quantum_white_100" android:contentDescription="@string/accessibility_fast_forward" style="@style/MusicPlayerButton" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/queue_loop" android:background="@drawable/ripple" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:scaleType="center" android:contentDescription="@string/accessibility_music_repeat" android:alpha="@dimen/active_icon_alpha" yt:srcCompat="@drawable/yt_outline_arrow_repeat_white_24" yt:tint="@color/quantum_white_100" style="@style/MusicPlayerButton" />
        <android.support.v7.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/sleep_timer_button" android:background="@drawable/ripple" android:visibility="gone" android:layout_width="@dimen/remix_overlay_player_control_button_size" android:layout_height="@dimen/remix_overlay_player_control_button_size" android:scaleType="center" android:alpha="@dimen/active_icon_alpha" yt:srcCompat="@drawable/yt_outline_moon_z_vd_theme_24" yt:tint="@color/quantum_white_100" style="@style/MusicPlayerButton" />
    </LinearLayout>
</RelativeLayout>