<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/coordinator_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" yt:layout_scrollFlags="enterAlways|scroll|snap" />
        <com.google.android.material.tabs.TabLayout android:layout_gravity="bottom" android:id="@id/tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" yt:tabGravity="fill" yt:tabIndicatorColor="@color/ytm_color_control_active" yt:tabIndicatorHeight="@dimen/tabs_highlight_height" yt:tabMaxWidth="0.0dip" yt:tabMode="fixed" yt:tabSelectedTextColor="#ffe1e1e1" yt:tabTextColor="#99e1e1e1" />
        <include android:id="@id/toolbar_divider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/toolbar_divider" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" yt:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.google.android.apps.youtube.music.ui.components.loading.LoadingFrameLayout android:id="@id/browse_content" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.apps.youtube.music.ui.tabs.TabbedView android:id="@id/tabbed_view" android:background="@null" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:deselectedIconAlpha="0.6" yt:tabHeaderBackground="?tabHeaderColor" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="260.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <View android:background="?ytSeparator" android:layout_width="360.0dip" android:layout_height="1.0dip" />
                <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Display1" android:textSize="32.0sp" android:gravity="center_horizontal" android:id="@id/retail_mode_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/retail_mode_intro" android:maxLines="2" />
                <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardBackgroundColor="@color/ytm_color_grey_12" card_view:cardCornerRadius="8.0dip" card_view:cardElevation="12.0dip" card_view:cardUseCompatPadding="true">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/demo_album" android:scaleType="centerCrop" android:adjustViewBounds="true" android:contentDescription="@null" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Display2" android:textSize="24.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_albums_header" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:letterSpacing="0.02" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Subtitle1" android:textSize="16.0sp" android:paddingTop="6.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_albums_subtext" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardBackgroundColor="@color/ytm_color_grey_12" card_view:cardCornerRadius="6.0dip" card_view:cardElevation="12.0dip" card_view:cardUseCompatPadding="true">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/demo_recommendation" android:scaleType="centerCrop" android:adjustViewBounds="true" android:contentDescription="@null" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Display2" android:textSize="24.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_recommendations_header" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:letterSpacing="0.02" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Subtitle1" android:textSize="16.0sp" android:paddingTop="6.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_recommendations_subtext" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardBackgroundColor="@color/ytm_color_grey_12" card_view:cardCornerRadius="6.0dip" card_view:cardElevation="12.0dip" card_view:cardUseCompatPadding="true">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/demo_catalog" android:scaleType="centerCrop" android:adjustViewBounds="true" android:contentDescription="@null" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Display2" android:textSize="24.0sp" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_catalog_header" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:letterSpacing="0.02" />
                        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Subtitle1" android:textSize="16.0sp" android:paddingTop="6.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/retail_mode_catalog_subtext" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </com.google.android.apps.youtube.music.ui.components.loading.LoadingFrameLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>