<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.youtube.music.signin.OnboardingVideoView android:id="@id/video_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="noHideDescendants" />
    <FrameLayout android:id="@id/welcome_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/button_layout" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginStart="@dimen/item_extra_large_spacing" android:layout_marginEnd="@dimen/item_extra_large_spacing">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_music" android:scaleType="centerCrop" android:contentDescription="@string/app_name" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Display1" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/sign_in_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_extra_extra_large_spacing" android:text="@string/welcome_text" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTubeMusic.Title2" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/sign_in_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_medium_spacing" android:text="@string/welcome_sign_in_text" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/button_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:layout_gravity="center" android:id="@id/sign_in_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/item_small_spacing" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:layout_gravity="center" android:id="@id/skip_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/item_small_spacing" />
    </LinearLayout>
    <ProgressBar android:id="@id/spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:progressBarStyle" />
    <FrameLayout android:id="@id/setup_login_failure" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="24.0dip" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setup_login_failed" yt:robotoFont="regular" />
            <TextView android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/setup_login_error_message" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:layout_gravity="center_horizontal" android:id="@id/setup_login_retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>